Add config file

--- a/mesos-dns.conf
+++ b/mesos-dns.conf
@@ -13,5 +13,5 @@ setgid root
 
 script
     . /etc/default/mesos-dns
-    exec /usr/local/bin/mesos-dns
+    exec /usr/local/bin/mesos-dns -logtostderr -config /etc/mesos-dns/config.json
 end script
